# spacebridge

./: .bazelrc  .clang-format  .gitignore  Dockerfile  MODULE.bazel  README.md  WORKSPACE  bootstrap.sh
src/RS41_spacebridge/: .mxproject  .project  RS41_spacebridge.ioc  STM32L412R8TX_FLASH.ld
src/RS41_spacebridge/Core/Inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
src/RS41_spacebridge/Core/Src/: delay.c  delay.h  main.c  stm32l4xx_hal_msp.c  ublox.c  ublox.h
src/RS41_spacebridge/Release/: RS41_spacebridge.list  makefile  objects.list
src/RS41_spacebridge/Release/Core/Src/: main.cyclo  subdir.mk
src/RS41_spacebridge/Release/Core/Startup/: subdir.mk
src/RS41_spacebridge/Release/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal.cyclo  stm32l4xx_hal_flash_ex.cyclo  stm32l4xx_hal_gpio.cyclo  subdir.mk  (+3 more)
src/flight/apps/: BUILD  humidity.cc  imu.cc
src/flight/devices/bme280/: BUILD  bme280.cc  bme280.hpp
src/flight/devices/lsm6dsv16x/: BUILD  lsm6dsv16x.cc  lsm6dsv16x.cpp  lsm6dsv16x.hpp
src/flight/hal/i2c/: BUILD  i2c.cpp  i2c.hpp
src/gps/: setup.sh
src/groundstation/: main.py  meade_swivel_test.py  meadetelescope_serialtester.py  requirements.txt
src/groundstation/meade_telescope/: README.md  meade_controller.py  meade_telescope_lib.py
src/groundstation/meade_telescope/test/: meade_swivel_test.py  meadetelescope_serialtester.py
src/groundstation/radio_recievers/: dummy_reciever.py  example_radio_reciever_setup.sh
src/meshtastic/configs/: README.md  groundstation_config.yaml
src/radio_experiments/: PySDR_RadioExperiments.ipynb  requirements.txt
